AoE loot feature
- New AoE loot feature available everywhere.
- Command to enable/disable AoE loot: ".village aoeloot" or ".v aoeloot"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(scripts_STAT_SRCS
   src/loader.cpp
   src/guild_village_customs_updater.cpp
   src/guild_village_commands.cpp
+  src/guild_village_aoe.cpp
   src/guild_village_create.cpp
   src/guild_village_upgrade.cpp
   src/guild_village_respawn.cpp
